# code-2

./: .gitignore  Copy_of_Advanced_Fraud_Detection_on_European_2013.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
fraud_detection/: __init__.py
scripts/: train_cli.py
src/fraud_detection/: __init__.py  __main__.py  train.py
src/fraud_model/: __init__.py  train.py  utils.py
tests/: test_basic.py  test_train.py
