[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-model"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3",
    "pandas>=2.1,<3",
    "scikit-learn>=1.4,<2"
]

[project.optional-dependencies]
tests = ["pytest>=8,<9"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
