[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detection"
version = "0.1.0"
description = "Simple utilities for fraud detection analysis"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "OpenAI Assistant" }]
license = { text = "MIT" }
keywords = ["fraud", "detection", "analysis"]
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn"
]

[project.optional-dependencies]
tests = ["pytest>=8,<9"]

[project.urls]
"Homepage" = "https://example.com/fraud_detection"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
